[gd_scene load_steps=20 format=2]

[ext_resource path="res://Minigames/Factory/Element.tscn" type="PackedScene" id=1]
[ext_resource path="res://schoolTheme.tres" type="Theme" id=2]
[ext_resource path="res://Minigames/Factory/figButtonn/Blue.png" type="Texture" id=3]
[ext_resource path="res://Minigames/Factory/figButtonn/Ggreen.png" type="Texture" id=4]
[ext_resource path="res://Minigames/Factory/figButtonn/Yellow.png" type="Texture" id=5]
[ext_resource path="res://Minigames/Factory/Factory.gd" type="Script" id=6]
[ext_resource path="res://Minigames/Factory/figButtonn/backShroom.png" type="Texture" id=7]
[ext_resource path="res://Minigames/Factory/linea.png" type="Texture" id=8]
[ext_resource path="res://Minigames/Factory/figButtonn/backDegsert.png" type="Texture" id=9]
[ext_resource path="res://Minigames/Factory/figButtonn/alienCircle.png" type="Texture" id=10]
[ext_resource path="res://Minigames/Factory/figButtonn/alienFront.png" type="Texture" id=11]
[ext_resource path="res://Minigames/Factory/figButtonn/backGrasslands.png" type="Texture" id=12]
[ext_resource path="res://Minigames/Factory/figButtonn/alienShip.png" type="Texture" id=13]
[ext_resource path="res://Minigames/Factory/Sprites/sci_fi_bg1.jpg" type="Texture" id=14]
[ext_resource path="res://Minigames/Factory/Sprites/circleGray.png" type="Texture" id=15]
[ext_resource path="res://Minigames/Factory/Sprites/helmetGray.png" type="Texture" id=16]
[ext_resource path="res://Minigames/Factory/Sprites/mannedGray.png" type="Texture" id=17]
[ext_resource path="res://Minigames/Factory/Sprites/conveyorbelt.png" type="Texture" id=18]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 532.87, 66.7964 )

[node name="Node2D" type="Node2D"]
position = Vector2( 181, 6 )
script = ExtResource( 6 )
circleGray = ExtResource( 15 )
helmetGray = ExtResource( 16 )
mannedGray = ExtResource( 17 )
background1 = ExtResource( 9 )
background2 = ExtResource( 7 )
background3 = ExtResource( 12 )
elementScene = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 458.778, 354.75 )
scale = Vector2( 0.666204, 0.666204 )
texture = ExtResource( 14 )

[node name="ChangeColorArea" type="Area2D" parent="."]
position = Vector2( 350, 150 )
scale = Vector2( 0.666204, 0.666204 )

[node name="Sprite" type="TextureRect" parent="ChangeColorArea"]
margin_left = 534.0
margin_top = -66.0
margin_right = 654.0
margin_bottom = 998.0
rect_rotation = 90.0
texture = ExtResource( 18 )
stretch_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChangeColorArea"]
position = Vector2( 0, -0.750549 )
shape = SubResource( 10 )

[node name="ChangeShapeArea" type="Area2D" parent="."]
position = Vector2( 350, 300 )
scale = Vector2( 0.666204, 0.666204 )

[node name="Sprite" type="TextureRect" parent="ChangeShapeArea"]
margin_left = 534.0
margin_top = -66.0
margin_right = 654.0
margin_bottom = 998.0
rect_rotation = 90.0
texture = ExtResource( 18 )
stretch_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChangeShapeArea"]
position = Vector2( 0, -0.750549 )
shape = SubResource( 10 )

[node name="ChangeBkgArea" type="Area2D" parent="."]
position = Vector2( 350, 450 )
scale = Vector2( 0.666204, 0.666204 )

[node name="Sprite" type="TextureRect" parent="ChangeBkgArea"]
margin_left = 534.0
margin_top = -66.0
margin_right = 654.0
margin_bottom = 998.0
rect_rotation = 90.0
texture = ExtResource( 18 )
stretch_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChangeBkgArea"]
position = Vector2( 0, -0.750549 )
shape = SubResource( 10 )

[node name="Validation Area" type="Area2D" parent="."]
position = Vector2( 350, 600 )
scale = Vector2( 0.666204, 0.666204 )

[node name="Sprite" type="Sprite" parent="Validation Area"]
scale = Vector2( 1.65115, 2.25156 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Validation Area"]
position = Vector2( 0, -0.750549 )
shape = SubResource( 10 )

[node name="ChangeBlueButton" type="Button" parent="."]
margin_left = 800.0
margin_top = 125.0
margin_right = 860.0
margin_bottom = 175.0
theme = ExtResource( 2 )
icon = ExtResource( 3 )

[node name="ChangeGreenButton" type="Button" parent="."]
margin_left = 900.0
margin_top = 125.0
margin_right = 960.0
margin_bottom = 175.0
rect_pivot_offset = Vector2( 0, 54 )
theme = ExtResource( 2 )
icon = ExtResource( 4 )

[node name="ChangeYellowButton" type="Button" parent="."]
margin_left = 1000.0
margin_top = 125.0
margin_right = 1060.0
margin_bottom = 175.0
theme = ExtResource( 2 )
icon = ExtResource( 5 )

[node name="ChangeShape1Button" type="Button" parent="."]
margin_left = 799.0
margin_top = 275.0
margin_right = 849.0
margin_bottom = 325.0
theme = ExtResource( 2 )
icon = ExtResource( 10 )

[node name="ChangeShape2Button" type="Button" parent="."]
margin_left = 905.0
margin_top = 270.0
margin_right = 955.0
margin_bottom = 330.0
theme = ExtResource( 2 )
icon = ExtResource( 11 )

[node name="ChangeShape3Button" type="Button" parent="."]
margin_left = 1000.0
margin_top = 270.0
margin_right = 1050.0
margin_bottom = 330.0
theme = ExtResource( 2 )
icon = ExtResource( 13 )

[node name="ChangeBkg1Button" type="Button" parent="."]
margin_left = 798.0
margin_top = 413.0
margin_right = 868.0
margin_bottom = 482.0
theme = ExtResource( 2 )
icon = ExtResource( 9 )

[node name="ChangeBkg2Button" type="Button" parent="."]
margin_left = 900.0
margin_top = 413.0
margin_right = 971.0
margin_bottom = 351.0
theme = ExtResource( 2 )
icon = ExtResource( 7 )

[node name="ChangeBkg3Button" type="Button" parent="."]
margin_left = 1000.0
margin_top = 413.0
margin_right = 1072.0
margin_bottom = 351.0
theme = ExtResource( 2 )
icon = ExtResource( 12 )

[node name="elementTimer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
margin_left = 839.0
margin_top = 16.0
margin_right = 877.0
margin_bottom = 30.0
text = "Score"

[node name="Label2" type="Label" parent="."]
margin_left = 889.0
margin_top = 17.0
margin_right = 929.0
margin_bottom = 31.0

[connection signal="body_entered" from="ChangeColorArea" to="." method="ChangeColor_body_entered"]
[connection signal="body_exited" from="ChangeColorArea" to="." method="ChangeColorArea_body_exited"]
[connection signal="body_entered" from="ChangeShapeArea" to="." method="ChangeShapeArea_body_entered"]
[connection signal="body_exited" from="ChangeShapeArea" to="." method="ChangeShapeArea_body_exited"]
[connection signal="body_entered" from="ChangeBkgArea" to="." method="_ChangeBkgArea_body_entered"]
[connection signal="body_exited" from="ChangeBkgArea" to="." method="_ChangeBkgArea_body_exited"]
[connection signal="body_entered" from="Validation Area" to="." method="Validation_Area_body_entered"]
[connection signal="pressed" from="ChangeBlueButton" to="." method="_on_ChangeBlueButton_pressed"]
[connection signal="pressed" from="ChangeGreenButton" to="." method="_on_ChangeGreenButton_pressed"]
[connection signal="pressed" from="ChangeYellowButton" to="." method="_on_ChangeYellowButton_pressed"]
[connection signal="pressed" from="ChangeShape1Button" to="." method="_on_ChangeShape1Button_pressed"]
[connection signal="pressed" from="ChangeShape2Button" to="." method="_on_ChangeShape2Button_pressed"]
[connection signal="pressed" from="ChangeShape3Button" to="." method="_on_ChangeShape3Button_pressed"]
[connection signal="pressed" from="ChangeBkg1Button" to="." method="_on_ChangeBkg1Button_pressed"]
[connection signal="pressed" from="ChangeBkg2Button" to="." method="_on_ChangeBkg2Button_pressed"]
[connection signal="pressed" from="ChangeBkg3Button" to="." method="_on_ChangeBkg3Button_pressed"]
[connection signal="timeout" from="elementTimer" to="." method="_on_elementTimer_timeout"]
